--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>about</title>
-</head>
-<body>
-    <h1>about</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}about{% endblock %}
+
+{% block body %}about{% endblock %}
+
