--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-</head>
-<body>
-    <h1>index</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}index{% endblock %}
+
+{% block body %}index{% endblock %}
