--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css">
+
     {% block title %}{% endblock %}
 </head>
 <body>
+  <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm">
+    <p class="h5 my-0 me-md-auto fw-normal">FLASK TEST</p>
+    <nav class="my-2 my-md-0 me-md-3">
+      <a class="p-2 text-dark" href="/">Homee</a>
+      <a class="p-2 text-dark" href="/about">About</a>
+    </nav>
+    <a class="btn btn-outline-primary" href="#">Sign up</a>
+  </header>
+
 {% block body %}{% endblock %}
+
+  <footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">© 2021 Flask test</p>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="#">link 1</a></li>
+      <li class="list-inline-item"><a href="#">link 2</a></li>
+      <li class="list-inline-item"><a href="#">link 3</a></li>
+    </ul>
+  </footer>
+
 </body>
+
+
+
 </html>
