--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}<title>about</title>{% endblock %}
+{% block title %}<title>create</title>{% endblock %}
 
 {% block body %}
 
